tests/baselines/reference/staticClassMemberError.errors.txt
==== tests/cases/compiler/staticClassMemberError.ts (3 errors) ====
    class C {
    	static s;
    	public a() {
    		s = 1;
    		~
!!! error TS2304: Cannot find name 's'.
    	}
    }
    
    // just want to make sure this one doesn't crash the compiler
    function Foo();
             ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    class Foo {
          ~~~
!!! error TS2300: Duplicate identifier 'Foo'.
     static bar;
    }